# AnnotateChange

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  annotate_change.py  annotate_change_v2.py  boot.sh  config.py  docker-compose.yml  flask.sh  pyproject.toml  requirements.txt
app/: __init__.py  cli.py  config.py  decorators.py  email.py  errors.py  forms.py  models.py  routes.py
app/admin/: __init__.py  datasets.py  decorators.py  forms.py  routes.py
app/auth/: __init__.py  email.py  forms.py  routes.py
app/errors/: __init__.py  handlers.py
app/main/: __init__.py  datasets.py  demo.py  email.py  forms.py  routes.py
app/static/: annotate.css  base.css  user_index.css  view_annotation.css
app/static/css/: footer.css  global.css  index.css
app/static/js/: buttons.js  makeChart.js  makeChartMulti.js  updateTable.js
app/templates/: 404.html  500.html  base.html  index.html  login.html  register.html  reset_password.html  reset_password_request.html
app/templates/admin/: add.html  (+8 more)
app/utils/: dataset_schema.json  datasets.py  tasks.py
demo_data/: demo_100.json  demo_200.json  demo_300.json  demo_400.json  demo_500.json  demo_600.json  demo_650.json  demo_700.json  demo_800.json
docs/: DEPLOYMENT.md
migrations/versions/: 37a7d932fc02_.py  386d5c61a29b_add_cp_index_column.py  43c24fc4dd24_changes_for_demo.py  48da31c2de2c_user_flags.py  70fb9f3860b1_.py  878e8193ae4d_change_annotation_structure.py  ab06eac38963_mark_task_assigned_by_admin.py  b74a19cbe419_.py  e58a3596b899_add_email_confirmation_field.py  f3622e20dd86_initialize.py
(+22 files in other folders)
