[tool.poetry]
name = "annotate_change_v2"
version = "0.1.0"
description = ""
authors = ["Gertjan van den Burg <gertjanvandenburg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
flask-wtf = "^0.14.2"
flask-sqlalchemy = "^2.3"
flask-migrate = "^2.4"
flask-login = "^0.4.1"
flask-mail = "^0.9.1"
pyjwt = "^1.7"
flask-bootstrap = "^3.3"
python-dotenv = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
